--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:theme="@style/AppTheme">
 
         <activity android:name="com.marwa.eltayeb.tweetme.MainActivity">
+
+        </activity>
+
+        <activity android:name="com.marwa.eltayeb.tweetme.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,9 +26,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.marwa.eltayeb.tweetme.LoginActivity" />
 
-        <activity android:name="com.marwa.eltayeb.tweetme.SignupActivity"/>
+        <activity android:name="com.marwa.eltayeb.tweetme.SignupActivity">
+
+        </activity>
     </application>
 
 </manifest>
