--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.marwa.eltayeb.tweetme">
+    package="com.marwa.eltayeb.LoginForm">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,11 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.marwa.eltayeb.tweetme.MainActivity">
+        <activity android:name="com.marwa.eltayeb.LoginForm.MainActivity">
 
         </activity>
 
-        <activity android:name="com.marwa.eltayeb.tweetme.LoginActivity">
+        <activity android:name="com.marwa.eltayeb.LoginForm.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +27,7 @@
         </activity>
 
 
-        <activity android:name="com.marwa.eltayeb.tweetme.SignupActivity">
+        <activity android:name="com.marwa.eltayeb.LoginForm.SignUpActivity">
 
         </activity>
     </application>
